# oop-final-project-sem2

./: CMakeLists.txt  main.cpp
Entities/: Apartment.cpp  Apartment.h  House.cpp  House.h  Property.cpp  Property.h
Repository/: Repo.cpp  Repo.h  RepoFile.cpp  RepoFile.h
Service/: Service.cpp  Service.h
Tests/: EntitiesTester.cpp  EntitiesTester.h  RepoFileTester.cpp  RepoFileTester.h  RepoTester.cpp  RepoTester.h  ServiceTester.cpp  ServiceTester.h  Tests.cpp  ValidatorsTest.cpp  ValidatorsTest.h
UI/: UI.cpp  UI.h
Validation/: ApartmentValidator.cpp  ApartmentValidator.h  HouseValidator.cpp  HouseValidator.h  PropertyValidator.cpp  PropertyValidator.h  ReadFromFileException.h  RepoException.h  ValidationException.h
